--- a/ITZRealStateWeb/Views/Amenitie/Index.cshtml
+++ b/ITZRealStateWeb/Views/Amenitie/Index.cshtml
@@ -1,19 +1,10 @@
 ﻿@model IEnumerable<ITZRealStateWeb.Models.Amenitie>
 
-@{
-    ViewBag.Title = "Index";
-}
-
-<h2>Index</h2>
-
 <p>
-    @Html.ActionLink("Create New", "Create")
+     <a href="#" onclick="CreateAmenitie();">Create New</a>
 </p>
 <table>
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.IdAmenitie)
-        </th>
         <th>
             @Html.DisplayNameFor(model => model.name)
         </th>
@@ -23,17 +14,14 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.IdAmenitie)
-        </td>
-        <td>
             @Html.DisplayFor(modelItem => item.name)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+            @Html.ActionLink("Delete", "Delete", new { id=item.IdAmenitie })
         </td>
     </tr>
 }
 
 </table>
+
+@Scripts.Render("~/Scripts/Amenitie/Index.js")
