--- a/ITZRealStateWeb/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/ITZRealStateWeb/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,17 @@
-﻿@model ITZRealStateWeb.Models.RegisterExternalLoginModel
+﻿<head>
+    <title>itzrealstate</title>
+    <meta name="description" content="website description" />
+    <meta name="keywords" content="website keywords, website keywords" />
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+    <link rel="stylesheet" type="text/css" href="~/Content/logs.css" />
+    <!-- modernizr enables HTML5 elements and feature detects -->
+    <script type="text/javascript" src="js/modernizr-1.5.min.js"></script>
+</head>
+
+<div id="centro" class="form_settings">
+    <div id="login-box" class="side">
+
+@model ITZRealStateWeb.Models.RegisterExternalLoginModel
 @{
     ViewBag.Title = "Registrarse";
 }
@@ -34,3 +47,6 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+
+        </div>
+    </div>
