--- a/ITZRealStateWeb/Views/Listing/Edit.cshtml
+++ b/ITZRealStateWeb/Views/Listing/Edit.cshtml
@@ -13,8 +13,10 @@
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
-    @*<fieldset>*@
-        <legend>Listing</legend>
+     <div id="login-box"  class="">
+       <div class="form_settings" id=" centro">
+
+        <legend><h2>Listing</h2></legend>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.street)
@@ -89,13 +91,14 @@
         </div>
     
         @Html.HiddenFor(model => model.IdListing)
-		@*@Html.HiddenFor(model => model.IdUser)
-        @Html.HiddenFor(model => model.sold)*@
+        		
 
         <p>
             <input class="btn" type="button" value="Update" onclick="submitEdit(this.form);" />
             <input class="btn" type="submit" value="Cancel" onclick="cancel();" />
         </p>
-    @*</fieldset>*@
+           </div>
+         </div>
+
 }
 
