--- a/ITZRealStateWeb/Views/Listing/Index.cshtml
+++ b/ITZRealStateWeb/Views/Listing/Index.cshtml
@@ -60,8 +60,10 @@
             @Html.DisplayFor(modelItem => item.zipcode)
         </td>
         <td>
-            <a href="#" onclick="editListing(@item.IdListing);">Edit</a> |
+            @if(ViewBag.rol == "Administrator"){
+            <a href="#" onclick="editListing(@item.IdListing);">Edit</a> 
             @Html.ActionLink("Delete", "DeleteListingAjax","Listing", new { id = item.IdListing },null)
+            }
             
             <!--<a href="#" onclick="deleteListing(@item.IdListing);">Delete</a>-->
         </td>
