--- a/ITZRealStateWeb/Views/Amenitie/Create.cshtml
+++ b/ITZRealStateWeb/Views/Amenitie/Create.cshtml
@@ -3,10 +3,15 @@
 <script src="~/Scripts/jquery-1.7.1.min.js"></script>
 <script src="~/Scripts/jquery.validate.min.js"></script>
 <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+<link rel="stylesheet" type="text/css" href="~/Content/logs.css" />
 
 @using (Html.BeginForm("CreateAmenitie", "Amenitie", FormMethod.Post, new { id = "current_form" })) {
     @Html.ValidationSummary(true)
 
+    <div id="login-box"  class="">
+       <div class="form_settings" id=" centro">
+
+        <legend><h2>Amenitie</h2></legend>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.name)
@@ -20,6 +25,9 @@
            <input id="btnCreate" class="btn" type="submit" value="Create" onclick="createAgent(this.form);" />
             <input class="btn" type="submit" value="Cancel" onclick="cancel();" />
         </p>
+           </div>
+        </div>
+    
 }
 
 @Scripts.Render("~/Scripts/Amenitie/Index.js")
