--- a/ITZRealStateWeb/Views/Shared/_Layout.cshtml
+++ b/ITZRealStateWeb/Views/Shared/_Layout.cshtml
@@ -56,7 +56,9 @@
                 <li><a href="#" onclick="DesireList(@(ViewBag.id));">Favorites</a></li>
                 @if ((ViewBag.rol == "SalesAgent")){
                     <li><a href="#" onclick="MyListings(@(ViewBag.id));">Listings</a></li>
-                    if(ViewBag.rol == "Administrator"){
+                }
+                
+                    @if(ViewBag.rol == "Administrator"){
                         <li><a href="#" onclick="Listings();">Listings</a></li>
                         <li><a href="#" onclick="Agents();">Sale Agents</a></li>
                         <li><a href="#">Settings</a>
@@ -65,7 +67,7 @@
                                 <li> <a href="#" onclick="Rooms();">Room</a></li>
                             </ul>
                         </li>    
-                    }       
+                         
                 }
             </ul>
         </div>
