--- a/ITZRealStateWeb/Views/User/Edit.cshtml
+++ b/ITZRealStateWeb/Views/User/Edit.cshtml
@@ -8,10 +8,8 @@
 {
     @Html.ValidationSummary(true)
 
-     <div id="login-box"  class="">
-       <div class="form_settings" id=" centro">
-
-        <legend><h2>User</h2></legend>
+    <fieldset>
+        <legend>User</legend>
 
         @Html.HiddenFor(model => model.UserId)
         @Html.HiddenFor(model => model.UserName)
@@ -67,6 +65,5 @@
         <p>
             <input type="submit" value="Save" />
         </p>
-    </div>
-         </div>
+    </fieldset>
 }
