--- a/ITZRealStateWeb/Views/Desire/Index.cshtml
+++ b/ITZRealStateWeb/Views/Desire/Index.cshtml
@@ -17,8 +17,6 @@
         <th>
             @Html.DisplayNameFor(model => model.price)
         </th>
-        <th>
-        </th>
     </tr>
 
 @foreach (var item in Model) {
@@ -39,7 +37,9 @@
             @Html.DisplayFor(modelItem => item.price)
         </td>
         <td>
+            @Html.ActionLink("Show on Map", "Edit", new { /* id=item.PrimaryKey */ }) |
             @Html.ActionLink("Remove", "DeleteDesireAjax", new { id = item.IdListing, idu= ViewBag.id}) |
+            @Html.ActionLink("Share", "Delete", new { item.IdListing })
         </td>
     </tr>
 }
