--- a/ITZRealStateWeb/Views/Listing/Create.cshtml
+++ b/ITZRealStateWeb/Views/Listing/Create.cshtml
@@ -12,6 +12,8 @@
 {
     @Html.ValidationSummary(true)
 
+   @* <fieldset>*@
+
         <div id="login-box"  class="">
        <div class="form_settings" id=" centro">
 
@@ -86,4 +88,7 @@
            
         </div>
         </div>
+    
+      
+    @*</fieldset>*@
 } 
