--- a/ITZRealStateWeb/Views/Amenitie/Index.cshtml
+++ b/ITZRealStateWeb/Views/Amenitie/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿@model IEnumerable<ITZRealStateWeb.Models.Amenitie>
+<link rel="stylesheet" type="text/css" href="~/Content/logs.css" />
 
 <p>
-     <a href="#" onclick="CreateAmenitie();">Create New</a>
+    <input class="btn" type="button" onclick="CreateAmenitie();" value="Create New"/>
 </p>
 <table>
     <tr>
