--- a/ITZRealStateWeb/Views/Room/Index.cshtml
+++ b/ITZRealStateWeb/Views/Room/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿@model IEnumerable<ITZRealStateWeb.Models.Room>
-
+<link rel="stylesheet" type="text/css" href="~/Content/logs.css" />
 <p>
-    <a href="#" onclick="CreateRoom();">Create New</a>
+    <input class="btn" type="button" onclick="CreateRoom();;" value="Create New"/>
+
 </p>
 <table>
     <tr>
