--- a/ITZRealStateWeb/Views/User/Index.cshtml
+++ b/ITZRealStateWeb/Views/User/Index.cshtml
@@ -1,7 +1,9 @@
 ﻿@model IEnumerable<ITZRealStateWeb.Models.User>
+<link rel="stylesheet" type="text/css" href="~/Content/logs.css" />
 
 <p>
-    <a href="#" onclick="CreateAgent();">Create New</a>
+    <input class="btn" type="button" onclick="CreateAgent();" value="Create New"/>
+    
 </p>
 <table>
     <tr>
