--- a/ITZRealStateWeb/Views/Desire/Index.cshtml
+++ b/ITZRealStateWeb/Views/Desire/Index.cshtml
@@ -3,13 +3,7 @@
     <tr>
         
         <th>
-            @Html.DisplayNameFor(model => model.street)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.number)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.colony)
+            @Html.DisplayNameFor(model => model.Address)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.constSize)
@@ -17,20 +11,17 @@
         <th>
             @Html.DisplayNameFor(model => model.price)
         </th>
-        <th></th>
+
+        <th>
+
+        </th>
 
     </tr>
 
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.street)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.number)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.colony)
+            @Html.DisplayFor(modelItem => item.Address)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.constSize)
@@ -39,11 +30,12 @@
             @Html.DisplayFor(modelItem => item.price)
         </td>
         <td>
-            @Html.ActionLink("Show on Map", "Edit", new { /* id=item.PrimaryKey */ }) |
             @Html.ActionLink("Remove", "DeleteDesireAjax", new { id = item.IdListing, idu= ViewBag.id}) |
-            @Html.ActionLink("Share", "Delete", new { item.IdListing })
+            <a onclick="redeem('@item.Address','http://itzrealstate.localhost');">Share</a>
         </td>
     </tr>
 }
 
 </table>
+
+@Scripts.Render("~/Scripts/Desire/Index.js")
