--- a/ITZRealStateWeb/Views/Listing/Edit.cshtml
+++ b/ITZRealStateWeb/Views/Listing/Edit.cshtml
@@ -17,27 +17,11 @@
         <h2><legend>Edit Listing</legend></h2>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.street)
+            @Html.LabelFor(model => model.Address)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.street)
-            @Html.ValidationMessageFor(model => model.street)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.number)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.number)
-            @Html.ValidationMessageFor(model => model.number)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.colony)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.colony)
-            @Html.ValidationMessageFor(model => model.colony)
+            @Html.EditorFor(model => model.Address)
+            @Html.ValidationMessageFor(model => model.Address)
         </div>
 
         <div class="editor-label">
@@ -71,15 +55,7 @@
             @Html.EditorFor(model => model.IdUser)
             @Html.ValidationMessageFor(model => model.IdUser)
         </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.sold)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.sold)
-            @Html.ValidationMessageFor(model => model.sold)
-        </div>
-
+    
         <div class="editor-label">
             @Html.LabelFor(model => model.zipcode)
         </div>
@@ -89,8 +65,6 @@
         </div>
     
         @Html.HiddenFor(model => model.IdListing)
-		@*@Html.HiddenFor(model => model.IdUser)
-        @Html.HiddenFor(model => model.sold)*@
 
         <p>
             <input class="btn" type="button" value="Update" onclick="submitEdit(this.form);" />
