--- a/ITZRealStateWeb/Views/Listing/Index.cshtml
+++ b/ITZRealStateWeb/Views/Listing/Index.cshtml
@@ -9,13 +9,7 @@
 <table>
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.street)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.number)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.colony)
+            @Html.DisplayNameFor(model => model.Address)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.lotSize)
@@ -27,9 +21,6 @@
             @Html.DisplayNameFor(model => model.price)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.IdUser)
-        </th>
-        <th>
             @Html.DisplayNameFor(model => model.zipcode)
         </th>
         <th></th>
@@ -38,13 +29,7 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.street)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.number)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.colony)
+            @Html.DisplayFor(modelItem => item.Address)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.lotSize)
@@ -54,9 +39,6 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.price)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.IdUser)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.zipcode)
