--- a/ITZRealStateWeb/Views/Shared/_Layout.cshtml
+++ b/ITZRealStateWeb/Views/Shared/_Layout.cshtml
@@ -37,9 +37,6 @@
                                             }
                                         </span>
                                     </li>
-                                    <li>
-                                     @Html.Action("ExternalLoginsList","Account", new { ReturnUrl = ViewBag.ReturnUrl })
-                                        </li>
                                 </ul>
                             </li>
                         </ul>
@@ -56,7 +53,8 @@
                 <li><a href="#" onclick="DesireList(@(ViewBag.id));">Favorites</a></li>
                 @if ((ViewBag.rol == "SalesAgent")){
                     <li><a href="#" onclick="MyListings(@(ViewBag.id));">Listings</a></li>
-                    if(ViewBag.rol == "Administrator"){
+                }
+                    @if(ViewBag.rol == "Administrator"){
                         <li><a href="#" onclick="Listings();">Listings</a></li>
                         <li><a href="#" onclick="Agents();">Sale Agents</a></li>
                         <li><a href="#">Settings</a>
@@ -65,7 +63,7 @@
                                 <li> <a href="#" onclick="Rooms();">Room</a></li>
                             </ul>
                         </li>    
-                    }       
+      
                 }
             </ul>
         </div>
